# ankhanzi

./: .gitignore  Cargo.toml  README.md  Untitled.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: main.rs
src/lib/: dict.rs  handler.rs  mod.rs
src/lib/addons/: filepath.rs  mod.rs  pbar.rs
src/lib/connecter/: handler.rs  mod.rs
src/lib/dictionary/: ankiconnect.rs  control_entry.rs  handler.rs  hanzi.rs  mod.rs  mongo.rs
static/: erros_anki.json  saida_errosanki.csv
