[package]
name = "ankhanzi-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cedict = "0.2"
indicatif = "0.17.0-rc.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
phf = { version = "0.11.0", features = ["macros"] }
dotenv = "0.15.0"
mongodb = "2.3.0"
bson = "2.3.0"
futures = "0.3.21"
